Refactor and cleanup unused imports